<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">qbank-calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="period_begin">Начало периода</string>
    <string name="period_end">Конец периода</string>
    <string name="ok">Ок</string>
    <string name="week_day_monday">Пн</string>
    <string name="week_day_tuesday">Вт</string>
    <string name="week_day_wednesday">Ср</string>
    <string name="week_day_thursday">Чт</string>
    <string name="week_day_friday">Пт</string>
    <string name="week_day_saturday">Сб</string>
    <string name="week_day_sunday">Вс</string>

    <string-array name="month_list">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

</resources>
